# AI-news-agents

./: .gitignore  README.md  prefect_flows.py  pyproject.toml  scheduler.md
agents/: http_client.py  logger.py  models.py  publisher.py  pydantic_compat.py  reader.py  researcher.py  storage.py  theme_engine.py
data/: feedback.json  feedback_samples.json  source_catalog.json  weather_stub.json
docs/: FEEDBACK.md  STATUS.md
requirements/: base.txt  summarizers.txt
templates/: daily_digest.html.j2
tests/: test_reader.py  test_researcher.py  test_storage.py  test_theme_engine.py
themes/: palettes.json
