[tool.poetry]
name = "ai-news-agents"
version = "0.1.0"
description = "Automated three-agent workflow that produces AI business news digests"
authors = ["AI Assistant <ai@example.com>"]
readme = "README.md"
packages = [{ include = "agents" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
feedparser = "^6.0.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^1.10.13"
python-dateutil = "^2.8.2"
prefect = "^2.14.20"
Jinja2 = "^3.1.2"
loguru = "^0.7.0"

[tool.poetry.extras]
summarizers = ["newspaper3k", "readability-lxml"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
